--- a/ordgåter.html
+++ b/ordgåter.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Ordgåter</title>
-    <script src="https://getacademy.github.io/LittOmKoding/ordliste.txt"/>
+    <!--<script src="https://getacademy.github.io/LittOmKoding/ordliste.txt"/>-->
+    <script src="https://getacademy.github.io/LittOmKoding/ordliste.js"/>
 </head>
 <body onload="visGåte()">
     <script>
